<resources>
    <string name="app_name">Manager Fridge</string>
    <string name="basket">Корзина</string>
    <string name="delete_list">Удалить список</string>
    <string name="form_recipe">Сформировать рецепты</string>
    <string name="add_product">Добавить продукт</string>
    <string name="save_recipe">Сохранить рецепт</string>
    <string name="category">Категория</string>
    <string name="add_caregory">Выберете категории</string>
    <string name="time">Время приготовления</string>
    <string name="in_minutes">В минутах</string>
    <string name="name_recipe">Название рецепта</string>
    <string name="recipe">Рецепт</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="enter_recipe">Введите рецепт</string>
    <string name="edit_recipe">Редактировать рецепт</string>
    <string name="delete_recipe">Удалить рецепт</string>
    <string name="back_to_recipes">Вернуться к рецептам</string>
    <string name="add_to_box">Добавить в корзину</string>
    <string name="time_recipe">Время приготовления (в минутах):</string>
    <string name="add_to_fridge">Отправить в холодильник</string>
    <string name="send_recipe">Отправить на email</string>
    <string name="update_recipes">Обновить базу рецептов</string>
</resources>
