<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.08"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.62"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_name_recipe_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_name_product_style"
                android:ems="10"
                android:hint="@string/add_product"
                android:inputType="textPersonName"
                android:padding="@dimen/edit_text_padding"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/back_to_list_recipe_products"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@android:color/darker_gray"
                android:clickable="true"
                android:drawableLeft="@android:drawable/ic_menu_revert"
                android:gravity="center_horizontal"
                android:textSize="@dimen/text_size" />

            <ListView
                android:id="@+id/list_recipe_products"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true" />
        </LinearLayout>
        <ScrollView
            android:layout_weight="0.38"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="serif"
                    android:padding="@dimen/pad"
                    android:text="@string/category"
                    android:textSize="@dimen/text_size" />

                <Spinner
                    android:id="@+id/sp_recipe_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="serif"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.76"
                    android:fontFamily="serif"
                    android:padding="@dimen/pad"
                    android:text="@string/time"
                    android:textSize="17.5sp" />

                <EditText
                    android:id="@+id/edit_recipe_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.24"
                    android:background="@drawable/edit_recipe_style"
                    android:fontFamily="serif"
                    android:hint="@string/in_minutes"
                    android:padding="@dimen/pad"
                    android:textSize="17.5sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="3">

                <EditText
                    android:id="@+id/edit_recipe_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/pad"
                    android:background="@drawable/edit_recipe_style"
                    android:fontFamily="serif"
                    android:hint="@string/name_recipe"
                    android:paddingBottom="@dimen/pad"
                    android:paddingLeft="@dimen/pad"
                    android:paddingRight="@dimen/pad"
                    android:paddingTop="@dimen/pad"
                    android:textSize="@dimen/text_size" />

                <EditText
                    android:id="@+id/edit_recipe_instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_recipe_style"
                    android:fontFamily="serif"
                    android:hint="@string/recipe"
                    android:paddingBottom="@dimen/pad"
                    android:paddingLeft="@dimen/pad"
                    android:paddingRight="@dimen/pad"
                    android:paddingTop="@dimen/pad"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ingredients"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/list_recipe_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:fontFamily="serif" />

                <TextView
                    android:id="@+id/btn_save_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorLightGreen"
                    android:gravity="center"
                    android:padding="@dimen/pad"
                    android:text="@string/save_recipe"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold|italic" />
            </LinearLayout>
        </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_add_recipe_list_recipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            app:srcCompat="@mipmap/search" />

        <ImageButton
            android:id="@+id/btn_add_recipe_fridge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            app:srcCompat="@mipmap/fridge" />
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@mipmap/list"
            android:background="@null" />
        <ImageButton
            android:id="@+id/btn_add_recipe_basket"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            app:srcCompat="@mipmap/basket" />
    </LinearLayout>
</LinearLayout>