<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="1"
        android:layout_weight="0.08"
        android:orientation="horizontal">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.55">

            <EditText
                android:id="@+id/edit_name_basket_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_name_product_style"
                android:ems="10"
                android:hint="@string/add_product"
                android:inputType="textPersonName"
                android:padding="@dimen/edit_text_padding"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/back_to_list_basket_products"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@android:color/darker_gray"
                android:clickable="true"
                android:drawableLeft="@android:drawable/ic_menu_revert"
                android:gravity="center_horizontal"
                android:textSize="@dimen/text_size" />

            <ListView
                android:id="@+id/list_basket_products"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/list_box"
            android:layout_weight="0.45">
            <ListView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/basket_products"
                android:clickable="true" />

            <TextView
                android:id="@+id/add_products_to_fridge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorRed"
                android:gravity="center"
                android:textStyle="bold|italic"
                android:padding="@dimen/pad"
                android:text="@string/add_to_fridge"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/delete_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@android:color/holo_green_light"
                android:gravity="center"
                android:textStyle="bold|italic"
                android:clickable="true"
                android:padding="@dimen/pad"
                android:text="@string/delete_list"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_basket_list_recipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:baselineAlignBottom="false"
            android:clickable="true"
            app:srcCompat="@mipmap/search" />

        <ImageButton
            android:id="@+id/btn_basket_fridge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            app:srcCompat="@mipmap/fridge" />

        <ImageButton
            android:id="@+id/btn_basket_add_recipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            app:srcCompat="@mipmap/list" />
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@mipmap/basket"
            android:background="@null" />
    </LinearLayout>
</LinearLayout>